--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "bootstrap": "~3.1.1",
     "jquery": "~1.11.0",
     "angular": "~1.5",
-    "angular-route": "~1.5"
+    "angular-route": "~1.5",
+    "angular-ui-router": "0.3.0"
+
   },
   "devDependencies": {
     "DefinitelyTyped": "*",
