--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "bootstrap": "~3.1.1",
     "jquery": "~1.11.0",
     "angular": "~1.5",
-    "angular-ui-router": "0.2.31"
+    "angular-ui-router": "~0.3.0"
 
   },
   "devDependencies": {
