--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     "bootstrap": "~3.1.1",
     "jquery": "~1.11.0",
     "angular": "~1.5",
-    "angular-ui-router": "~0.3.0"
-
+    "angular-ui-router": "~0.3.0",
+    "angular-messages": "^1.5.6"
   },
   "devDependencies": {
     "DefinitelyTyped": "*",
